monitoring/overlays/tokyo0/grafana/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: bastion
spec:
  virtualhost:
    fqdn: grafana.monitoring.tokyo0.cybozu-ne.co
    tls:
      secretName: grafana-tls
  routes:
    - conditions:
        - prefix: /
      timeoutPolicy:
        response: 2m
        idle: 5m
      services:
        - name: grafana
          port: 80
